# tutor-contrib-aspects-sample

./: MANIFEST.in  Makefile  README.rst  catalog-info.yaml  pyproject.toml
.github/workflows/: test.yml
tutoraspects_sample/: plugin.py
tutoraspects_sample/patches/: superset-extra-assets
tutorsample_aspects/: plugin.py
tutorsample_aspects/patches/: superset-extra-assets
tutorsample_aspects/templates/sample-aspects/assets/dashboards/: Sample_Aspects_Plugin.yaml
