# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://hatch.pypa.io/latest/config/build/

[project]
name = "tutor-contrib-aspects-sample"
description = "aspects-sample plugin for Tutor"
authors = [
  { name = "Sara Burns"},
  { email = "sburns@axim.org" },
]
license = { text = "AGPL-3.0-only" }

readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">= 3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",

]
dependencies = [
    "tutor",
]

# These fields will be set by hatch_build.py
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "tutor[dev]",
    "ruff",
]

[tool.hatch.version]
path = "tutoraspects_sample/__about__.py"

# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
[project.urls]
Documentation = "https://github.com/saraburns1/tutor-contrib-aspects-sample#readme"
Issues = "https://github.com/saraburns1/tutor-contrib-aspects-sample/issues"
Source = "https://github.com/saraburns1/tutor-contrib-aspects-sample"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tutoraspects_sample"]

[tool.hatch.build.targets.sdist]
# Disable strict naming, otherwise twine is not able to detect name/version
strict-naming = false
include = [ "/tutoraspects_sample"]
exclude = ["tests*"]

[project.entry-points."tutor.plugin.v1"]
aspects-sample = "tutoraspects_sample.plugin"
